feat: implement role-based access control system (PATIENT, SPECIALIST, RESEARCHER, ADMIN)