@@ -1,112 +1,94 @@
 package com.biomechanics.backend.config;
-import lombok.extern.slf4j.Slf4j;
+
+import com.biomechanics.backend.security.JwtAuthenticationFilter;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
-@Slf4j
+
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
+@RequiredArgsConstructor
 public class SecurityConfig {
-    @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        log.info("Configuring Security Filter Chain (DEVELOPMENT MODE - All endpoints public)");
+    private final JwtAuthenticationFilter jwtAuthFilter;
+    private final AuthenticationProvider authenticationProvider;
 
+    private static final String[] PUBLIC_ENDPOINTS = {
+            "/api/auth/**",
+            "/swagger-ui/**",
+            "/swagger-ui.html",
+            "/api-docs/**",
+            "/actuator/health"
+    };
+
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
-
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(
-                                "/swagger-ui/**",
-                                "/v3/api-docs/**",
-                                "/swagger-ui.html",
-                                "/actuator/health",
-                                "/api/scans/health"
-                        ).permitAll()
 
-                        // TODO: For production, protect these with JWT:
-                        // .requestMatchers("/api/scans/**").authenticated()
-                        // .requestMatchers("/api/users/**").authenticated()
-                        .anyRequest().permitAll()
-                );
+                        .requestMatchers(PUBLIC_ENDPOINTS).permitAll()
+
+                        .requestMatchers(HttpMethod.GET, "/api/users/me").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/api/users/me").authenticated()
+
+                        .requestMatchers(HttpMethod.POST, "/api/scans/upload")
+                        .hasAnyRole("PATIENT", "SPECIALIST", "ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/scans/{sessionId}")
+                        .hasAnyRole("PATIENT", "SPECIALIST", "ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/scans/my-history")
+                        .hasAnyRole("PATIENT", "SPECIALIST", "ADMIN")
+
+                        .requestMatchers("/api/patients/**")
+                        .hasAnyRole("SPECIALIST", "ADMIN")
+
+                        .requestMatchers("/api/research/**")
+                        .hasAnyRole("RESEARCHER", "ADMIN")
+
+                        .requestMatchers("/api/admin/**")
+                        .hasRole("ADMIN")
+
+                        .anyRequest().authenticated()
+                )
+                .authenticationProvider(authenticationProvider)
+                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        log.info("Configuring CORS (DEVELOPMENT MODE - All origins allowed)");
-
-        CorsConfiguration configuration = new CorsConfiguration();
-
-        // DEVELOPMENT: Allow all origins
-        // TODO: For production, restrict to specific frontend URL:
-        // configuration.setAllowedOrigins(List.of("https://your-frontend-domain.com"));
-        configuration.setAllowedOriginPatterns(List.of("*"));
-
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(List.of(
+                "http://localhost:4200"
         ));
-
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "Accept",
-                "X-Requested-With"
-        ));
-
-        configuration.setExposedHeaders(List.of(
-                "Authorization"
-        ));
-
-        configuration.setAllowCredentials(true);
-
-        configuration.setMaxAge(3600L);
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With"));
+        config.setExposedHeaders(List.of("Authorization"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-
+        source.registerCorsConfiguration("/api/**", config);
         return source;
     }
-
-    /*
-     * TODO: JWT AUTHENTICATION
-     *
-     * @Bean
-     * public JwtAuthenticationFilter jwtAuthenticationFilter() {
-     *     return new JwtAuthenticationFilter();
-     * }
-     *
-     *
-     * http
-     *     .addFilterBefore(jwtAuthenticationFilter(),
-     *                      UsernamePasswordAuthenticationFilter.class)
-     *     .authorizeHttpRequests(auth -> auth
-     *         .requestMatchers("/api/auth/**").permitAll()  // Login/Register
-     *         .requestMatchers("/api/scans/**").authenticated()
-     *         .anyRequest().authenticated()
-     *     );
-     *
-     * @Bean
-     * public PasswordEncoder passwordEncoder() {
-     *     return new BCryptPasswordEncoder();
-     * }
-     *
-     * @Bean
-     * public AuthenticationManager authenticationManager(
-     *         AuthenticationConfiguration config) throws Exception {
-     *     return config.getAuthenticationManager();
-     * }
-     */
 }
